Fix width of player card and search bar on mobile

--- a/assets/css/components/_elements.scss
+++ b/assets/css/components/_elements.scss
@@ -2,8 +2,33 @@ body {
   font-family: 'Roboto', sans-serif !important;
 }
 
-.form-control {
-  border-radius: 0px !important;
+.player-search-bar {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 0px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+.player-search-bar:focus {
+  outline: none !important;
+}
+
+@media only screen and (max-width: 767px) {
+  .player-search-bar {
+    width: 90% !important;
+    margin: auto !important;
+  }
 }
 
 h2 {
@@ -17,6 +42,10 @@ h2 {
 
 table {
   border-bottom: 1px solid #aaaaaa;
+  @media only screen and (max-width: 767px) {
+    width: 90% !important;
+    margin: auto !important;
+  }
 }
 table>tbody>tr>td {
   border-top: 1px solid #aaaaaa !important;
